  * If MPB is configured with the flag --with-hermitian-epsilon, then
    complex-hermitian dielectric tensors (corresponding to magnetic
    materials, which break time-reversal symmetry) are supported.

MPB 0.13 (1/7/2001)

  * Can now take advantage of inversion symmetry in the geometry, gaining
    at least a factor of two in speed and a factor of two in memory.
    To use this, you configure MPB with --with-inv-symmetry; the resulting
    executable is installed as "mpbi" and only supports inversion symmetry,
    so you will usually want to install the ordinary MPB as well.

  * Added new eigensolver-block-size input variable, so that MPB can
    optionally solve for only a few bands at a time instead of all
    at once, reducing memory requirements and often increasing speed.

  * Improved handling of the singular (zero-frequency) solutions at
    the Gamma (k=0) point.  This k point should no longer converge
    slowly (or cause additional problems in the targeted eigensolver).

  * Manual updates: please see new referencing suggestions; expanded table
    of contents; we now use more conventional units in diamond/fcc example.

  * You can now pass a "thunk" (function of no arguments) to run, and
    it will be evaluated once per k-point (instead of once per band
    per k-point as for ordinary band functions).

  * compute-field-energy function now also returns the fraction of the
    energy in the various field components.  Thanks to Karl Koch
    for the suggestion.

  * The filename-prefix variable is now read each time an output function
    is called, instead of once per (run), so it can be changed frequently
    if desired.  Thanks to Karl Koch for the suggestion.

  * Added first-brillouin-zone function to transform an arbitrary
    k-point into an equivalent point in the first Brillouin zone.
    Thanks to Payam Rabiei for the suggestion.

  * In mpb-data, the center of the output cell is now always identical