@@ -16,6 +16,11 @@
 
 ; ****************************************************************
 
+; get the number of arguments to a function p:
+(define (procedure-num-args p) (car (procedure-property p 'arity)))
+
+; ****************************************************************
+
 (define-class material-type no-parent)
 
 (define-class dielectric material-type
@@ -28,6 +33,10 @@
   (define-property epsilon-offdiag 'vector3 (make-default (vector3 0 0 0)))
   (define-property
     epsilon-offdiag-imag 'vector3 (make-default (vector3 0 0 0))))
+
+(define-class material-function material-type
+  (define-property material-func 'function no-default
+    (lambda (p) (= 1 (procedure-num-args p)))))
 
 ; use the solid geometry classes, variables, etcetera in libgeom:
 ; (one specifications file can include another specifications file)
@@ -294,11 +303,6 @@
 	  (display-many "mean flops per iteration = "
 			(/ eigensolver-flops (* num-runs mean-iters)) "\n")
 	  ))))
-
-; ****************************************************************
-
-; get the number of arguments to a function p:
-(define (procedure-num-args p) (car (procedure-property p 'arity)))
 
 ; ****************************************************************
 
